# PythonWorkshops

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: continuous_integration.yml  python-app.yml
001_Data/: uk_govie_spots.csv
002_Code/: pyproject.toml  session1.ipynb
pypricer/: api.py  demo_functions.py  pypricer_api.py
pypricer/options/: european.py
pypricer/simulations/: wiener_process.py
test/: test_pytest_demo.py
test/options/: test_european.py
test/simulations/: test_wiener_process.py
workshop_materials/: requirements.txt
