[tool.poetry]
name = "pypricer"
version = "1.0.0"
description = "Package for simulation of stochastic processes and option pricing."
authors = ["PIOTR MIKLER <piotr.mikler1997@gmail.com>"]
readme = "README.md"
packages = [{include = "pypricer"}]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.13.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
pytest = "^8.2.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
